# NCEPLIBS-gfsio

./: CMakeLists.txt  LICENSE.md  README.md  bafrio.f  build.sh  build_gfsio.sh  gfsio_module.f  makefile_4  modulefile.template
.github/workflows/: Intel.yml  Spack.yml  main.yml
Conf/: AAA_rename_conf.sh  Gfsio_gnu_General.sh  Gfsio_intel_Cray.sh  Gfsio_intel_Dell.sh  Gfsio_intel_General.sh  Gfsio_intel_Hera.sh  Gfsio_intel_Theia.sh  Gfsio_intel_Wcoss.sh
spack/: README  package.py
src/: CMakeLists.txt  Makefile
tests/: CMakeLists.txt
